# affine-cortex

./: .env.example  .gitignore  Dockerfile  IMPROVEMENTS.md  README.md  pyproject.toml
affine/: __init__.py
compose/: docker-compose.api.yml  docker-compose.backend.local.yml  docker-compose.backend.yml
docs/: FAQ.md  INSTRUCTION_GYM.md  MINER.md  RATE_LIMITING.md  SGLANG_PD_4P4D.md  TOKEN_EFFICIENCY_SCORING_DESIGN.md  VALIDATOR.md
examples/: sdk.py  sdk2.py  sdk_basilica.py
scripts/: audit_cold_termination_false_positives.py  check_wheel_contents.py  generate_instruction_gym_sampling_manifest.py  gpu_autoscale_wrapper.py  init-targon-worker.sh  lium_autoscale_wrapper.py  openai_stub.py  targon_autoscale_wrapper.py  test_instruction_gym_e2e.py
skill/: SKILL.md
tests/: test_anti_copy.py  test_anticopy_monitor_step8.py  test_anticopy_pairwise.py  test_anticopy_per_env_verdict.py  test_anticopy_refresh.py  test_anticopy_refresh_schedule.py  test_anticopy_state_dao.py  test_anticopy_task_filter.py  test_anticopy_threshold.py  test_anticopy_verdict_backfill.py  test_anticopy_worker_arch_allowlist.py  test_anticopy_worker_arch_switch.py  test_anticopy_worker_bootstrap.py  test_anticopy_worker_parser.py  test_anticopy_worker_prefetch.py  test_anticopy_worker_pull.py  test_anticopy_worker_retroactive.py  test_anticopy_worker_retry.py  test_anticopy_worker_stream_verdict.py  test_api_client_extended.py  test_api_contract.py  test_api_windows.py  test_behavior_executor_gate.py  test_behavior_gate_dao.py  test_behavior_guard_policy.py  test_behavior_preflight.py  (+59 more)
(+156 files in other folders)
